syntax = "proto3";

package datasource.code;
option go_package = "github.com/ca-risken/datasource-api/proto/code";

/**
 * Entity
 **/

// CodeDataSource
message CodeDataSource {
  uint32 code_data_source_id = 1;
  string name = 2;
  string description = 3;
  float max_score = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// Gitleaks
message Gitleaks {
  uint32 gitleaks_id = 1;
  uint32 code_data_source_id = 2;
  string name = 3;
  uint32 project_id = 4;
  Type type = 5;
  string base_url = 6;
  string target_resource = 7;
  string repository_pattern = 8;
  string github_user = 9;
  string personal_access_token = 10;
  bool scan_public = 11;
  bool scan_internal = 12;
  bool scan_private = 13;
  string gitleaks_config = 14;
  Status status = 15;
  string status_detail = 16;
  int64 scan_at = 17;
  int64 created_at = 18;
  int64 updated_at = 19;
  int64 scan_succeeded_at = 20;
}

// Type
enum Type {
  UNKNOWN_TYPE = 0;
  ENTERPRISE = 1;
  ORGANIZATION = 2;
  USER = 3;
}

// Status
enum Status {
  UNKNOWN = 0;
  OK = 1;
  CONFIGURED = 2;
  IN_PROGRESS = 3;
  ERROR = 4;
}

// GitleaksForUpsert
message GitleaksForUpsert {
  uint32 gitleaks_id = 1; // Unique key for Gitleaks entity.
  uint32 code_data_source_id = 2;
  string name = 3;
  uint32 project_id = 4;
  Type type = 5;
  string base_url = 6;
  string target_resource = 7;
  string repository_pattern = 8;
  string github_user = 9;
  string personal_access_token = 10;
  bool scan_public = 11;
  bool scan_internal = 12;
  bool scan_private = 13;
  string gitleaks_config = 14;
  Status status = 15;
  string status_detail = 16;
  int64 scan_at = 17;
  int64 scan_succeeded_at = 18;
}

// EnterpriseOrg
message EnterpriseOrg {
  uint32 gitleaks_id = 1;
  string login = 2;
  uint32 project_id = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// EnterpriseOrgForUpsert
message EnterpriseOrgForUpsert {
  uint32 gitleaks_id = 1;
  string login = 2;
  uint32 project_id = 3;
}
